<resources>
    <string name="app_name">Organizer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bConvert">Convert</string>
    <string name="bList">List</string>
    <string name="bExit">Exit</string>
    <string name="tvSelect">Select .txt File</string>
    <string name="bBrowse">Browse</string>
    <string name="title_activity_convert">Convert</string>
    <string name="title_activity_list">List of Converted Files</string>
    <string name="title_activity_listing">ListingActivity</string>
</resources>
